move to maven