@@ -1,23 +1,5 @@
-# FROM gradle:jdk17 as build
-
-# COPY --chown=gradle:gradle . /home/gradle/src
-# WORKDIR /home/gradle/src
-# RUN gradle build --no-daemon
-
-# FROM openjdk:17-jdk
-
-# EXPOSE 8080
-
-# RUN mkdir /app
-
-# COPY --from=build /home/gradle/src/build/libs/*.jar /app/
-
-# ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
-
-
 FROM openjdk:17-jdk
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY build/libs/*.jar app.jar
-EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+EXPOSE 8080 8000
+ADD target/webmToTelegram-0.0.1-SNAPSHOT.jar webmToTelegram-0.0.1-SNAPSHOT.jar
+ADD entrypoint.sh entrypoint.sh
+ENTRYPOINT ["sh","/entrypoint.sh"]
